# vod-strm-builder

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker.yml
crates/vsb/: Cargo.toml
crates/vsb/src/: config.rs  filter.rs  jellyfin.rs  m3u.rs  main.rs  model.rs  pipeline.rs  server.rs  text.rs  tmdb.rs  writer.rs  xtream.rs
deploy/: portainer-stack.yml
docs/: configuration.md
examples/: config.example.yml  selected-groups.example.json  source.rust.example.yml
src/vod_strm_builder/: catalog.py  cli.py  config.py  jellyfin.py  m3u.py  models.py  nfo.py  tmdb.py  utils.py  webapp.py  writer.py  xtream.py
tests/: test_tmdb.py  test_utils.py  test_webapp.py  test_xtream.py
tools/: export_dispatcharr_vod_catalog.py  export_dispatcharr_vod_groups.py
web/: group-picker.html  index.html
