[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "vod-strm-builder"
version = "0.2.0"
description = "Generate Jellyfin/Plex-friendly STRM and NFO libraries directly from Xtream/M3U VOD sources."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
  "Flask>=3.0.0",
  "gunicorn>=23.0.0",
  "PyYAML>=6.0.2",
  "requests>=2.32.0",
]

[project.scripts]
vod-strm-builder = "vod_strm_builder.cli:main"
vod-strm-builder-web = "vod_strm_builder.webapp:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
